Show/Hide proposed transactions in dashboard settings default = off for new members, no proposed = no scam

--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1886,6 +1886,7 @@
         "total": "Всего"
     },
     "settings": {
+        "showProposedTx": "Показывать предложенные транзакции",
         "access": "Узлы",
         "access_text": "",
         "accounts": "Аккаунты",
