--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -1886,6 +1886,7 @@
         "total": "Total"
     },
     "settings": {
+        "showProposedTx": "Show proposed transactions in dashboard",
         "access": "Verbindungsknoten",
         "access_text": "",
         "accounts": "Konten",
