--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -1886,6 +1886,7 @@
         "total": "Total"
     },
     "settings": {
+        "showProposedTx": "Show proposed transactions in dashboard",
         "access": "Acceso",
         "access_text": "",
         "accounts": "Cuentas",
