--- a/app/assets/locales/locale-fr.json
+++ b/app/assets/locales/locale-fr.json
@@ -1880,6 +1880,7 @@
         "total": "Total"
     },
     "settings": {
+        "showProposedTx": "Show proposed transactions in dashboard",
         "access": "Nodes",
         "access_text": "",
         "accounts": "Accounts",
