--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -1880,6 +1880,7 @@
         "total": "Total"
     },
     "settings": {
+        "showProposedTx": "Show proposed transactions in dashboard",
         "access": "アクセス",
         "access_text": "",
         "accounts": "アカウント",
