--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -1886,6 +1886,7 @@
         "total": "交易额"
     },
     "settings": {
+        "showProposedTx": "Show proposed transactions in dashboard",
         "access": "接入点",
         "access_text": "",
         "accounts": "账户",
