- add insight icon - add create account icon - use real dropdown items for submenu - restructure the menu building way as callbacks - streamline use of proper defaults and fallbacks
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1249,6 +1249,7 @@
         "payments": "Send",
         "payments_legacy": "or Legacy Send",
         "settings": "Settings",
+        "insight": "Insight",
         "showcases": "Spotlight",
         "title": "%(wallet_name)s UI",
         "unlock": "Local Wallet Login",
